HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DuplicateClassImplementationRule/Expected.uv
//! Expected diagnostic metadata for the DuplicateClassImplementationRule rejected-source specimen.

expectedDiagnostic("E-TYP-2506", "rule.14.Impl-Coherence-Err")
